force-app/main/default/objects/Vacation__c/Vacation__c.object-meta.xml
<CustomObject>
    <label>Vacation</label>
    <nameField>
        <label>Vacations Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vacations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>