force-app/main/default/objects/Vacation__c/fields/SquadLead__c.field-meta.xml
<CustomField>
    <fullName>SquadLead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Squad Lead</label>
    <referenceTo>User</referenceTo>
    <relationshipName>SquadLeads</relationshipName>
    <type>Lookup</type>
</CustomField>